Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19874

Flicking behaviour of ListView/GridView is not consistent

XMLWordPrintable

    • e7bebcf0c59368340df524db4a53ae2595d057d7

      When we set SnapOneItem=true (in Listview) or SnapOneRow=true (in GridView), flicking sometimes doesn't move to next/previous item in the view. Attached is a sample prototype and video of the same.

      Desired Behaviour:

      1. Currently flicking is not consistent even on same flick-speed, sometimes it flicks, sometimes it does not as can be seen in the video. Flicking behaviour should be consistent.

      2. The item should be moved to next/previous item irrespective of flick speed.

        1. WP_000011.zip
          5.09 MB
        2. WP_000012.zip
          7.01 MB
        3. flickissue.zip
          1007 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            pradeepgm G M pradeepkumar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes